@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-15T08:24:06Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 6 ],
-  "count_decinc" : [ -3, +6 ],
+  "timestamp" : "2022-10-15T16:24:26Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 6 ],
+  "count_decinc" : [ -4, +6 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
   "uniques_decinc" : [ -1, +3 ]
