@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-10-15T08:24:06Z",
+  "timestamp" : "2022-10-15T16:24:26Z",
   "count_outdated" : 584,
   "uniques_outdated" : 334,
   "count" : 605,
@@ -7,8 +7,8 @@
   "clones" : [
     {
       "timestamp": "2022-10-01T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 6 ],
+      "count": 2,
+      "count_minmax": [ 2, 6 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 3 ]
     },
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
