@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-10-01T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
