@@ -1,3 +1,11 @@
+2022-10-15T16:24:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3256360937 # 938
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 334 584 / 346 605
+* notice: next accum: outdated-unq outdated-all / unq all: 334 584 / 346 605
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]
+
 2022-10-15T08:24:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3255003264 # 937
 * notice: last 14d: unq all: 5 21
